Implementation of auto completion, formatting adjustment and providing hints for JEP 405 record patterns (#4533)
* Add autocompletion for Record Patterns